# webgpu-sandbox

./: .clang-format  .clang-tidy  .gitignore  .prettierrc  CMakeLists.txt  README.md  compile_flags.txt  emsc-init.ps1  emsc-init.sh  emsc-setup.sh
apps/: CMakeLists.txt
apps/buffer-copy/: CMakeLists.txt  main.cpp  utils.c  utils.h
apps/clear-screen/: CMakeLists.txt  graphics.c  main.cpp
apps/hello-buffer/: CMakeLists.txt  main.cpp  wgpu_config.c  wgpu_config.h
apps/hello-dawn/: CMakeLists.txt  main.cpp
apps/hello-imgui/: main.cpp
apps/hello-mesh/: CMakeLists.txt  main.cpp  shader_src.hpp  wgpu_config.h
apps/hello-render-pass/: CMakeLists.txt  main.cpp  wgpu_config.c  wgpu_config.h
apps/hello-triangle/: CMakeLists.txt  gfx_config.c  gfx_config.h  graphics.c  graphics.h  main.cpp  wgpu_config.c
apps/hello-webgpu/: CMakeLists.txt  main.cpp
apps/indexed-mesh/: graphics.c  main.cpp
apps/learn-webgpu-cpp/: CMakeLists.txt  main.cpp
apps/shared/: dr_shim.hpp  file_utils.cpp  file_utils.hpp
apps/textured-mesh/: assets.cpp  assets.hpp  graphics.c  graphics.h  main.cpp
cmake/: app-utils.cmake  common.cmake  utils.cmake
examples/: CMakeLists.txt  example_base.cpp  example_base.hpp  file_utils.cpp
examples/buffer-copy/: CMakeLists.txt  main.cpp  utils.c  utils.h
examples/buffer-copy/web/: index.html
examples/clear-screen/: CMakeLists.txt  config.c  config.h  main.cpp
examples/clear-screen/web/: index.html
examples/hello-compute/: CMakeLists.txt  config.c  config.h  main.cpp  shader_src.hpp  utils.c  utils.h
examples/hello-compute/web/: index.html
examples/hello-imgui/: CMakeLists.txt  config.c  config.h  graphics.c  main.cpp
examples/hello-imgui/web/: index.html
examples/hello-triangle/: CMakeLists.txt  config.h  graphics.h  main.cpp
examples/hello-triangle-slang/: CMakeLists.txt  config.c  main.cpp
examples/hello-triangle-slang/assets/shaders/: triangle.slang
examples/hello-triangle-slang/web/: index.html
examples/hello-triangle/assets/shaders/: triangle.slang  triangle.wgsl
examples/hello-triangle/web/: index.html
examples/indexed-mesh/: CMakeLists.txt  config.c  config.h  graphics.c  graphics.h  main.cpp
examples/indexed-mesh/web/: index.html
examples/textured-mesh/: CMakeLists.txt  assets.cpp  assets.hpp  config.c  config.h  graphics.c  main.cpp
examples/textured-mesh/assets/shaders/: unlit_texture.slang
libs/: CMakeLists.txt
libs/webgpu-app/: CMakeLists.txt
libs/webgpu-app/include/webgpu/: app.hpp
libs/webgpu-app/src/: app.cpp
libs/webgpu-glfw/: CMakeLists.txt
libs/webgpu-glfw/include/webgpu/: glfw.h
libs/webgpu-glfw/src/: glfw.c
libs/wgpu-app/: CMakeLists.txt  wgpu_glfw.c  wgpu_utils.cpp  wgpu_utils.hpp
src/: CMakeLists.txt  defer.hpp  emsc_utils.cpp  emsc_utils.hpp  file_utils.hpp  wgpu_glfw.c  wgpu_utils.cpp  wgpu_utils.hpp
src/app-base/: CMakeLists.txt  wgpu_glfw.c  wgpu_glfw.h  wgpu_utils.cpp  wgpu_utils.hpp
src/buffer-copy/: CMakeLists.txt  index.html  main.cpp  utils.c  wgpu_config.c
src/buffer-copy/web/: index.html
src/clear-screen/: CMakeLists.txt  graphics.h  index.html  main.cpp  wgpu_config.c
src/clear-screen/web/: index.html
src/hello-buffer/: CMakeLists.txt  main.cpp
src/hello-imgui/: CMakeLists.txt  graphics.c  graphics.h  index.html  main.cpp  wgpu_config.c  wgpu_config.h
src/hello-imgui/web/: index.html
src/hello-mesh/: CMakeLists.txt  main.cpp  wgpu_config.c
src/hello-render-pass/: CMakeLists.txt  main.cpp
src/hello-triangle/: CMakeLists.txt  index.html  main.cpp  shader_src.hpp  wgpu_config.c  wgpu_config.h
src/hello-triangle/web/: index.html
src/hello-webgpu/: CMakeLists.txt  main.cpp
src/indexed-mesh/: CMakeLists.txt  graphics.c  graphics.h  index.html  main.cpp  shader_src.hpp  wgpu_config.c
src/indexed-mesh/web/: index.html
src/shared/: gfx_utils.cpp  gfx_utils.hpp
src/textured-mesh/: CMakeLists.txt  graphics.c  main.cpp
src/textured-mesh/assets/shaders/: unlit_texture.wgsl
src/textured-mesh/web/: index.html
src/wgpu-app/: CMakeLists.txt  utils.hpp  wgpu_glfw.c  wgpu_imgui.hpp  wgpu_utils.cpp  wgpu_utils.hpp
